# computationnew1

refactored_project/: CMakeLists.txt  FILES.txt  QUICKSTART.md  README.md  REFACTORING_REPORT.md  USAGE.md  build.sh  case1  case2
refactored_project/include/code_property_graph/: CPGAnalysisTester.h  CPGAnnotation.h  CPGBase.h  ComputeGraph.h  ComputeGraphAnchor.h  ComputeGraphBase.h  ComputeGraphTester.h
refactored_project/lib/code_property_graph/: CPGAnalysisTester.cpp  CPGAnnotation.cpp  CPGBuilder.cpp  CPGDataFlow.cpp  CPGVisualization.cpp  ComputeGraph.cpp  ComputeGraphAnchor.cpp  ComputeGraphBuilder.cpp  ComputeGraphBuilderNode.cpp  ComputeGraphBuilderProcess.cpp  ComputeGraphBuilderTrace.cpp  ComputeGraphTester.cpp  ComputeGraphUtil.cpp
refactored_project/tools/: ComputeGraphTool.cpp
